--- a/perfil.html
+++ b/perfil.html
@@ -19,6 +19,7 @@
                 <li><a href="cadastro.html">Cadastre-se</a></li>
                 <li><a href="perfil.html">Meu Perfil</a></li>
                 <li><a href="mural.html">Mural de Serviços</a></li>
+                <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +47,7 @@
             <a href="curriculoRenanPereiraLimadeMoraes.html" target="_blank">Renan Pereira Lima de Moraes</a>
         </div>
         <div class="github-link">
-            <a href="https://github.com/link-ficticio" target="_blank"><i class="fab fa-github"></i> Nosso GitHub</a>
+            <a href="https://github.com/RenanMor/Servilo" target="_blank"><i class="fab fa-github"></i> Nosso GitHub</a>
         </div>
     </footer>
 </body>
