--- a/curriculoGabrielDesouzaXavier.html
+++ b/curriculoGabrielDesouzaXavier.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Gabriel de Souza Xavier</title>
-    <link rel="stylesheet" href="curriculoGabrielDesouzaXavier.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="curriculo-body">
 
-<div class="container">
-    <header>
+<div class="curriculo-container">
+    <header class="curriculo-header">
         <h1>Gabriel de Souza Xavier</h1>
-        <div class="contact-info">
+        <div class="curriculo-contact-info">
             <ul>
                 <li id="email">E-mail: <a href="mailto:xavier.2003@utfpr.edu.br">xavier.2003@utfpr.edu.br</a></li>
                 <li id="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/gxavier901/" target="_blank">https://www.linkedin.com/in/gxavier901/</a></li>
@@ -20,21 +20,21 @@
         </div>
     </header>
 
-    <div class="section" id="resumo">
+    <div class="curriculo-section" id="resumo">
         <h2>Resumo</h2>
         <p>Estudante de Engenharia de Software na UTFPR apaixonado por tecnologia e inovação. Possuo conhecimentos em Java, C, Banco de Dados (MySQL, PostgreSQL), Linux, GIT, Power BI, Pacote Office e Metodologias Ágeis. Minha capacidade de trabalho em equipe, proatividade, comunicação eficaz e rápida adaptação me permite contribuir significativamente para o sucesso de novas iniciativas. Busco oportunidades para aplicar e expandir minhas competências em um ambiente de crescimento.</p>
     </div>
-    <div class="section" id="ods">
+    <div class="curriculo-section curriculo-ods" id="ods">
         <h2>ODS que pretendo contribuir</h2>
         <p>Acredito que posso contribuir, agora ou futuramente, para o seguinte Objetivo de Desenvolvimento Sustentável:</p>
         <figure>
-            <img src="images/curriculo Gabriel De souza Xavier.png" alt="ODS 4 - Educação de Qualidade" width="200" id="ods-img">
+            <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-4.svg" alt="ODS 4 - Educação de Qualidade" width="200" id="ods-img">
             <figcaption>ODS 4 - Educação de Qualidade</figcaption>
         </figure>
         <p>O ODS 4 busca assegurar a educação inclusiva e equitativa e de qualidade, e promover oportunidades de aprendizagem ao longo da vida para todos.</p>
     </div>
 
-    <div class="section" id="habilidades">
+    <div class="curriculo-section curriculo-habilidades" id="habilidades">
         <h2>Habilidades</h2>
         <ul>
             <li>Conhecimentos em git</li>
@@ -44,7 +44,7 @@
         </ul>
     </div>
 
-    <div class="section" id="educacao">
+    <div class="curriculo-section" id="educacao">
         <h2>Educação</h2>
         <h3>Graduação em Engenharia de Software</h3>
         <p>UTFPR-CP<br>2022 - 2026</p>
@@ -53,14 +53,14 @@
     </div>
 
 
-    <div class="section" id="links">
+    <div class="curriculo-section curriculo-links" id="links">
         <h2>Links adicionais</h2>
         <ul>
             <li><a href="https://github.com/Xavier909" target="_blank">Perfil do Github - Xavier909</a></li>
         </ul>
     </div>
 
-    <footer id="cv-footer">
+    <footer class="curriculo-footer">
         <p>CV - Gabriel de Souza Xavier - 2025</p>
     </footer>
 
