--- a/curriculoRenanPereiraLimadeMoraes.html
+++ b/curriculoRenanPereiraLimadeMoraes.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renan Pereira Lima de Moraes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="curriculo-renan-body">
 
-    <header>
+    <header class="curriculo-header">
         <h1>Renan Pereira Lima de Moraes</h1>
         
         <figure>
@@ -17,11 +18,11 @@
         <p>Brasileiro, solteiro, 24 anos.</p>
     </header>
 
-    <main>
+    <main class="curriculo-container">
 
-        <section>
+        <section class="curriculo-section">
             <h2>Informações de Contato</h2>
-            <ul>
+            <ul class="curriculo-contact-info">
                 <li>
                     <img src="https://img.icons8.com/ios-filled/50/000000/marker.png" alt="Ícone de localização" width="16">
                     <strong>Localização:</strong> Marília, SP
@@ -41,12 +42,12 @@
             </ul>
         </section>
 
-        <section>
+        <section class="curriculo-section">
             <h2>Objetivo</h2>
             <p>Busco uma oportunidade para desenvolver minhas habilidades como Engenheiro de Software, contribuindo para projetos desafiadores e para o crescimento da empresa.</p>
         </section>
 
-        <section>
+        <section class="curriculo-section curriculo-ods">
             <h2>ODS que pretendo contribuir</h2>
             <figure>
                 <img src="https://brasil.un.org/profiles/undg_country/themes/custom/undg/images/SDGs/pt-br/SDG-3.svg" alt="Ícone do Objetivo de Desenvolvimento Sustentável 3: Saúde e Bem-Estar" width="150">
@@ -54,7 +55,7 @@
             </figure>
         </section>
 
-        <section>
+        <section class="curriculo-section">
             <h2>Formação Acadêmica</h2>
             <ul>
                 <li>
@@ -67,7 +68,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="curriculo-section">
             <h2>Competências</h2>
             <ul>
                 <li>HTML5 Semântico</li>
@@ -80,7 +81,7 @@
 
     </main>
 
-    <footer>
+    <footer class="curriculo-footer">
         <p>Desenvolvido por Renan Pereira Lima de Moraes - Última atualização em 2025.</p>
     </footer>
 
